<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.story.StoryActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator_bagianstory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previewimage_bagianstory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imageView3_bagianactivitystory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />


    <TextView
        android:id="@+id/tvname_bagianactivitystory"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/previewimage_bagianstory"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/name_detail_story"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvdate_bagianstory"
        app:layout_constraintStart_toEndOf="@+id/imageView3_bagianactivitystory" />

    <TextView
        android:id="@+id/tvdate_bagianstory"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@+id/previewimage_bagianstory"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/date_detail"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvdesc_bagianstory"
        app:layout_constraintStart_toEndOf="@+id/imageView2_bagianstory" />

    <TextView
        android:id="@+id/tvdesc_bagianstory"
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_story"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:text="@string/desc_detail"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2_bagianstory"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvdesc_bagianstory"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_up_story" />

    <ImageView
        android:id="@+id/imageView3_bagianactivitystory"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2_bagianstory"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person" />


</androidx.constraintlayout.widget.ConstraintLayout>